
All the configuration options are now in file MkRules.



rw1041
======

Updating HTML indices, e.g. in help.start(), is done within a 
try() construct.

help.start() has a new argument `update'.

Making packages now warns if there is a configure script.

ga.h was needed for building package `windlgs', but was omitted from the
`source package' code for rw1040. It is now included.



rw1040
======

If --max-mem-size is given a value greater than 256M, the requested
maximum memory is reserved (but not allocated) initially.  This will
enable the memory to be managed more efficiently, but does increase
the chance that R cannot be started.  There appears to be an effective
limit of about 1700M, at least under Windows 2000.

memory.limit() can now increase the memory limit of the current session.
This will not work if the limit is currently reached!

internet2.dll (see changes for rw1030) must be selected by the
--internet2 flag.can

The miniR* distribution has grown to seven floppies, and no attempt is
now made to confine the zip files to floppy-size.

The background colour of a windows() window (outside the device
region) is now in the `Application Background' colour of the current
Windows colour scheme.  (It used to be LightGrey.)

Gamma correction is now applied to the background colour of a graphics
window.  (It has long been applied to the foreground colours.)  Users
of LCD screens may want to set something like gamma=2 when launching a
graphics window.

savePlot() now supports saving to PDF.

There is support for transparency in the devga device (which
encompasses screen windows, metafiles, printers and the bmp, jpeg and
png devices).  The default background colour is "transparent" for all
but the bitmap devices: this means that backgrounds are omitted when
plotting to/saving to most devices, and the colour that is visible is
that of the canvas (see below).  The png() device does support
transparent backgrounds, but this is not accessible through the menus