@@ -38,7 +38,7 @@ use Text::DelimMatch;
 ## don't buffer output
 $| = 1;
 
-my $revision = ' $Revision: 1.79 $ ';
+my $revision = ' $Revision: 1.80 $ ';
 my $version;
 my $name;
 $revision =~ / ([\d\.]*) /;
@@ -111,7 +111,7 @@ if($WINDOWS) {
     $LATEX = "latex";
     $MAKE = "make";
 }
-my $cfile = "$TMPDIR/Rcmd.$$";
+my $cfile = "$TMPDIR/Rcheck.$$";
 
 my $R_LIBS = $ENV{'R_LIBS'};
 my $library;
@@ -559,7 +559,7 @@ sub check_pkg {
 	    print RCMD "checkMethods(dir = \"${pkgdir}\")\n";
 	}
         close RCMD;
-        system("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
+        Rsystem("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
         my @out;
         open ROUT, "< $Rout";
         while(<ROUT>) {chomp; push(@out, $_);}
@@ -594,7 +594,7 @@ sub check_pkg {
 	    print RCMD "checkAssignFuns(dir = \"${pkgdir}\")\n";
 	}
         close RCMD;
-        system("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
+        Rsystem("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
         my @out;
         open ROUT, "< $Rout";
         while(<ROUT>) {chomp; push(@out, $_);}
@@ -769,7 +769,7 @@ sub check_pkg {
 	    print RCMD "undoc(dir = \"${pkgdir}\")\n";
 	}
         close RCMD;
-        system("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
+        Rsystem("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
         my @out;
         open ROUT, "< $Rout";
         while(<ROUT>) {chomp; push(@out, $_);}
@@ -810,7 +810,7 @@ sub check_pkg {
 	    print RCMD "codoc(dir = \"${pkgdir}\")\n";
 	}
         close RCMD;
-        system("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
+        Rsystem("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
         my @out;
         open ROUT, "< $Rout";
         while(<ROUT>) {chomp; push(@out, $_);}
@@ -850,7 +850,7 @@ sub check_pkg {
 	    print RCMD "checkDocArgs(dir = \"${pkgdir}\")\n";
 	}
         close RCMD;
-        system("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
+        Rsystem("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
         my @out;
         open ROUT, "< $Rout";
         while(<ROUT>) {chomp; push(@out, $_);}
